// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spreadsheet pivot side panel It should correctly be displayed 1`] = `
<div
  class="o-sidePanel h-100 bg-white border-top border-start"
>
  <div
    class="o-sidePanelHeader d-flex align-items-center justify-content-between border-bottom"
  >
    <div
      class="o-collapse-panel o-sidePanelAction rounded"
    >
      <i
        class="fa fa-angle-double-right"
      />
    </div>
    
    <div
      class="o-sidePanelTitle o-fw-bold ms-2"
    >
      Pivot #1
    </div>
    
    <div
      class="o-sidePanelClose o-sidePanelAction rounded"
    >
       ✕ 
    </div>
  </div>
  <div
    class="o-sidePanelBody-container d-flex flex-grow-1 "
  >
    <div
      class="o-sidePanel-handle-container"
    >
      <div
        class="o-sidePanel-handle"
      >
        <svg
          class="o-icon"
          fill="currentColor"
          viewBox="0 0 4 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="2"
            cy="3.5"
            r="1"
          />
          <circle
            cx="2"
            cy="6.5"
            r="1"
          />
          <circle
            cx="2"
            cy="9.5"
            r="1"
          />
          <circle
            cx="2"
            cy="12.5"
            r="1"
          />
        </svg>
      </div>
    </div>
    <div
      class="o-sidePanelBody"
    >
      <div
        class="o-pivot-panel d-flex flex-column h-100"
      >
        <div
          class="o-panel d-flex"
        >
          <div
            class="o-sidePanel-tab o-panel-configuration d-flew flex-grow-1 text-center"
          >
            <i
              class="fa fa-sliders me-1"
            />
             Configuration 
          </div>
          <div
            class="o-sidePanel-tab o-panel-design d-flew flex-grow-1 text-center inactive"
          >
            <i
              class="fa fa-paint-brush me-1"
            />
             Design 
          </div>
        </div>
        <div
          class="o-panel-content overflow-y-auto h-100"
        >
          <div
            class="h-100"
          >
            <div
              class="d-flex flex-column h-100 justify-content-between overflow-hidden"
            >
              <div
                class="h-100 position-relative overflow-x-hidden overflow-y-auto"
              >
                <div>
                  <div
                    class="o-section"
                  >
                    <div
                      class="o-section-title"
                    >
                      
                      <div
                        class="d-flex flex-row justify-content-between align-items-center"
                      >
                         Name 
                        <span
                          class="fa fa-cog os-cog-wheel-menu-icon o-button-icon"
                        />
                        
                        
                      </div>
                      
                    </div>
                    
                    <div
                      class="position-relative"
                    >
                      <input
                        class="os-pivot-title w-100 os-input"
                        type="text"
                      />
                      
                    </div>
                    
                  </div>
                  
                  <div
                    class="o-section"
                  >
                    <div
                      class="o-section-title"
                    >
                      Range
                      
                      
                    </div>
                    
                    <div
                      class="o-selection"
                    >
                      <div
                        class="o-selection-input d-flex flex-row"
                      >
                        
                        <div
                          class="position-relative w-100"
                        >
                          <input
                            class="o-input mb-2"
                            placeholder="e.g. A1:A2"
                            spellcheck="false"
                            style=""
                            type="text"
                          />
                          
                          
                        </div>
                        
                      </div>
                      
                      
                      <div
                        class="d-flex flex-row w-100 o-selection-input"
                      >
                        
                        
                      </div>
                    </div>
                    
                    
                  </div>
                  
                  <div
                    class="pivot-dimensions o-section"
                  >
                    <div
                      class="o-fw-bold py-1 d-flex flex-row justify-content-between align-items-center o-section-title"
                    >
                       Columns 
                      <button
                        class="add-dimension o-button"
                      >
                        Add
                      </button>
                      
                      
                    </div>
                    
                    
                    <div
                      class="o-fw-bold pt-4 pb-1 d-flex flex-row justify-content-between align-items-center o-section-title"
                    >
                       Rows 
                      <button
                        class="add-dimension o-button"
                      >
                        Add
                      </button>
                      
                      
                    </div>
                    
                    
                    <div
                      class="o-fw-bold pt-4 pb-1 d-flex flex-row justify-content-between align-items-center o-section-title o-pivot-measure"
                    >
                       Measures 
                      <button
                        class="add-dimension o-button"
                      >
                        Add
                      </button>
                      
                      
                    </div>
                    
                    
                  </div>
                  
                  
                </div>
              </div>
              <div
                class="o-section align-items-center border-top d-flex flex-row justify-content-between py-1 pivot-defer-update"
              >
                
                <label
                  class="o-checkbox d-flex align-items-center"
                  role="button"
                  title="Changing the pivot definition requires to reload the data. It may take some time."
                >
                  <input
                    class="me-2 flex-shrink-0 border"
                    type="checkbox"
                  />
                  <span
                    class="text-truncate"
                  >
                    Defer updates
                  </span>
                  
                </label>
                
                
              </div>
              
            </div>
          </div>
          <div
            class="d-none"
          >
            <div
              class="o-section o-pivot-design"
            >
              <div
                class="o-section-title"
              >
                Display options
                
                
              </div>
              
              <div>
                <div
                  class="container-fluid p-0 pt-2"
                >
                  <div
                    class="row mb-2 align-items-center"
                  >
                    <div
                      class="col-6"
                    >
                      Max rows:
                    </div>
                    <div
                      class="col-6 d-flex align-items-center"
                    >
                      <input
                        class="o-pivot-n-of-rows o-input"
                        placeholder="e.g. 10"
                        type="number"
                      />
                    </div>
                  </div>
                  <div
                    class="row mb-2 align-items-center"
                  >
                    <div
                      class="col-6"
                    >
                      Max columns:
                    </div>
                    <div
                      class="col-6 d-flex align-items-center"
                    >
                      <input
                        class="o-pivot-n-of-columns o-input"
                        placeholder="e.g. 5"
                        type="number"
                      />
                    </div>
                  </div>
                  <div
                    class="row mb-2 align-items-center"
                  >
                    <div
                      class="col-6"
                    >
                      Show totals:
                    </div>
                    <div
                      class="col-6 d-flex align-items-center"
                    >
                      <label
                        class="o-checkbox d-flex align-items-center"
                        role="button"
                      >
                        <input
                          class="me-2 flex-shrink-0 border"
                          name="displayTotals"
                          type="checkbox"
                        />
                        
                      </label>
                    </div>
                  </div>
                  <div
                    class="row mb-2 align-items-center"
                  >
                    <div
                      class="col-6"
                    >
                      Show column titles:
                    </div>
                    <div
                      class="col-6 d-flex align-items-center"
                    >
                      <label
                        class="o-checkbox d-flex align-items-center"
                        role="button"
                      >
                        <input
                          class="me-2 flex-shrink-0 border"
                          name="displayColumnHeaders"
                          type="checkbox"
                        />
                        
                      </label>
                    </div>
                  </div>
                  <div
                    class="row mb-2 align-items-center"
                  >
                    <div
                      class="col-6"
                    >
                      Show measure titles:
                    </div>
                    <div
                      class="col-6 d-flex align-items-center"
                    >
                      <label
                        class="o-checkbox d-flex align-items-center"
                        role="button"
                      >
                        <input
                          class="me-2 flex-shrink-0 border"
                          name="displayMeasuresRow"
                          type="checkbox"
                        />
                        
                      </label>
                    </div>
                  </div>
                  <div
                    class="row mb-2 align-items-center"
                  >
                    <div
                      class="col-6"
                    >
                      Use tabular form:
                    </div>
                    <div
                      class="col-6 d-flex align-items-center"
                    >
                      <label
                        class="o-checkbox d-flex align-items-center"
                        role="button"
                      >
                        <input
                          class="me-2 flex-shrink-0 border"
                          name="tabularForm"
                          type="checkbox"
                        />
                        
                      </label>
                    </div>
                  </div>
                </div>
              </div>
              
            </div>
            <div
              class="o-section o-pivot-table-style"
            >
              <div
                class="o-section-title"
              >
                Pivot table style
                
                
              </div>
              
              <div
                class="row mb-2 align-items-center pt-2"
              >
                <div
                  class="col-6"
                >
                  Banded rows:
                </div>
                <div
                  class="col-6 d-flex align-items-center"
                >
                  <label
                    class="o-checkbox d-flex align-items-center"
                    role="button"
                  >
                    <input
                      class="me-2 flex-shrink-0 border"
                      name="bandedRows"
                      type="checkbox"
                    />
                    
                  </label>
                </div>
              </div>
              <div
                class="row mb-2 align-items-center"
              >
                <div
                  class="col-6"
                >
                  Banded columns
                </div>
                <div
                  class="col-6 d-flex align-items-center"
                >
                  <label
                    class="o-checkbox d-flex align-items-center"
                    role="button"
                  >
                    <input
                      class="me-2 flex-shrink-0 border"
                      name="bandedColumns"
                      type="checkbox"
                    />
                    
                  </label>
                </div>
              </div>
              <div
                class="row mb-2 align-items-center"
              >
                <div
                  class="col-6"
                >
                  Filter button
                </div>
                <div
                  class="col-6 d-flex align-items-center"
                >
                  <label
                    class="o-checkbox d-flex align-items-center"
                    role="button"
                  >
                    <input
                      class="me-2 flex-shrink-0 border"
                      name="hasFilters"
                      type="checkbox"
                    />
                    
                  </label>
                </div>
              </div>
              <div
                class="mt-4"
              >
                <div
                  class="o-table-style-picker d-flex flew-row justify-content-between ps-1 border rounded"
                >
                  <div
                    class="d-flex flex-row overflow-hidden o-pivot-previews"
                  >
                    <div
                      class="o-table-style-list-item position-relative selected"
                      data-id="None"
                      title="None"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight1"
                      title="Light Black 1"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight2"
                      title="Light Blue 2"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight3"
                      title="Light Red 3"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight4"
                      title="Light Green 4"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight5"
                      title="Light Purple 5"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight6"
                      title="Light Gray 6"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight7"
                      title="Light Orange 7"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight8"
                      title="Light Black 8"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight9"
                      title="Light Blue 9"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight10"
                      title="Light Red 10"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight11"
                      title="Light Green 11"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight12"
                      title="Light Purple 12"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight13"
                      title="Light Gray 13"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight14"
                      title="Light Orange 14"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight15"
                      title="Light Black 15"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight16"
                      title="Light Blue 16"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight17"
                      title="Light Red 17"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight18"
                      title="Light Green 18"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight19"
                      title="Light Purple 19"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight20"
                      title="Light Gray 20"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight21"
                      title="Light Orange 21"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight22"
                      title="Light Black 22"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight23"
                      title="Light Blue 23"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight24"
                      title="Light Red 24"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight25"
                      title="Light Green 25"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight26"
                      title="Light Purple 26"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight27"
                      title="Light Gray 27"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight28"
                      title="Light Orange 28"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    
                  </div>
                  <div
                    class="o-table-style-picker-arrow d-flex align-items-center px-1 border-start"
                  >
                    <div
                      class="o-icon fa-small"
                    >
                      <i
                        class="fa fa-caret-down"
                      />
                    </div>
                  </div>
                </div>
                
              </div>
              
            </div>
          </div>
        </div>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`Spreadsheet pivot side panel It should display only the selection input when the dataSet is not valid 1`] = `
<div
  class="o-sidePanel h-100 bg-white border-top border-start"
>
  <div
    class="o-sidePanelHeader d-flex align-items-center justify-content-between border-bottom"
  >
    <div
      class="o-collapse-panel o-sidePanelAction rounded"
    >
      <i
        class="fa fa-angle-double-right"
      />
    </div>
    
    <div
      class="o-sidePanelTitle o-fw-bold ms-2"
    >
      Pivot #1
    </div>
    
    <div
      class="o-sidePanelClose o-sidePanelAction rounded"
    >
       ✕ 
    </div>
  </div>
  <div
    class="o-sidePanelBody-container d-flex flex-grow-1 "
  >
    <div
      class="o-sidePanel-handle-container"
    >
      <div
        class="o-sidePanel-handle"
      >
        <svg
          class="o-icon"
          fill="currentColor"
          viewBox="0 0 4 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="2"
            cy="3.5"
            r="1"
          />
          <circle
            cx="2"
            cy="6.5"
            r="1"
          />
          <circle
            cx="2"
            cy="9.5"
            r="1"
          />
          <circle
            cx="2"
            cy="12.5"
            r="1"
          />
        </svg>
      </div>
    </div>
    <div
      class="o-sidePanelBody"
    >
      <div
        class="o-pivot-panel d-flex flex-column h-100"
      >
        <div
          class="o-panel d-flex"
        >
          <div
            class="o-sidePanel-tab o-panel-configuration d-flew flex-grow-1 text-center"
          >
            <i
              class="fa fa-sliders me-1"
            />
             Configuration 
          </div>
          <div
            class="o-sidePanel-tab o-panel-design d-flew flex-grow-1 text-center inactive"
          >
            <i
              class="fa fa-paint-brush me-1"
            />
             Design 
          </div>
        </div>
        <div
          class="o-panel-content overflow-y-auto h-100"
        >
          <div
            class="h-100"
          >
            <div
              class="d-flex flex-column h-100 justify-content-between overflow-hidden"
            >
              <div
                class="h-100 position-relative overflow-x-hidden overflow-y-auto"
              >
                <div>
                  <div
                    class="o-section"
                  >
                    <div
                      class="o-section-title"
                    >
                      
                      <div
                        class="d-flex flex-row justify-content-between align-items-center"
                      >
                         Name 
                        <span
                          class="fa fa-cog os-cog-wheel-menu-icon o-button-icon"
                        />
                        
                        
                      </div>
                      
                    </div>
                    
                    <div
                      class="position-relative"
                    >
                      <input
                        class="os-pivot-title w-100 os-input"
                        type="text"
                      />
                      
                    </div>
                    
                  </div>
                  
                  <div
                    class="o-section"
                  >
                    <div
                      class="o-section-title"
                    >
                      Range
                      
                      
                    </div>
                    
                    <div
                      class="o-selection"
                    >
                      <div
                        class="o-selection-input d-flex flex-row"
                      >
                        
                        <div
                          class="position-relative w-100"
                        >
                          <input
                            class="o-input mb-2 o-focused o-invalid border-danger position-relative"
                            placeholder="e.g. A1:A2"
                            spellcheck="false"
                            style=""
                            type="text"
                          />
                          <span
                            class="input-icon text-danger position-absolute d-flex align-items-center"
                            title="This range is invalid"
                          >
                            <div
                              class="o-icon"
                            >
                              <i
                                class="fa fa-exclamation-circle"
                              />
                            </div>
                          </span>
                          
                          
                        </div>
                        
                      </div>
                      
                      
                      <div
                        class="d-flex flex-row w-100 o-selection-input"
                      >
                        
                        <div
                          class="ms-auto"
                        >
                          <button
                            class="o-button o-selection-ko"
                          >
                             Reset 
                          </button>
                          
                          <button
                            class="o-button primary ms-2 o-selection-ok"
                          >
                             Confirm 
                          </button>
                          
                        </div>
                        
                      </div>
                    </div>
                    <span
                      class="text-danger sp_range_error_message"
                    >
                      The pivot cannot be created because the dataset is missing.
                    </span>
                    
                  </div>
                  
                  
                </div>
              </div>
              <div
                class="o-section align-items-center border-top d-flex flex-row justify-content-between py-1 pivot-defer-update"
              >
                
                <label
                  class="o-checkbox d-flex align-items-center"
                  role="button"
                  title="Changing the pivot definition requires to reload the data. It may take some time."
                >
                  <input
                    class="me-2 flex-shrink-0 border"
                    type="checkbox"
                  />
                  <span
                    class="text-truncate"
                  >
                    Defer updates
                  </span>
                  
                </label>
                
                
              </div>
              
            </div>
          </div>
          <div
            class="d-none"
          >
            <div
              class="o-section o-pivot-design"
            >
              <div
                class="o-section-title"
              >
                Display options
                
                
              </div>
              
              <div>
                <div
                  class="container-fluid p-0 pt-2"
                >
                  <div
                    class="row mb-2 align-items-center"
                  >
                    <div
                      class="col-6"
                    >
                      Max rows:
                    </div>
                    <div
                      class="col-6 d-flex align-items-center"
                    >
                      <input
                        class="o-pivot-n-of-rows o-input"
                        placeholder="e.g. 10"
                        type="number"
                      />
                    </div>
                  </div>
                  <div
                    class="row mb-2 align-items-center"
                  >
                    <div
                      class="col-6"
                    >
                      Max columns:
                    </div>
                    <div
                      class="col-6 d-flex align-items-center"
                    >
                      <input
                        class="o-pivot-n-of-columns o-input"
                        placeholder="e.g. 5"
                        type="number"
                      />
                    </div>
                  </div>
                  <div
                    class="row mb-2 align-items-center"
                  >
                    <div
                      class="col-6"
                    >
                      Show totals:
                    </div>
                    <div
                      class="col-6 d-flex align-items-center"
                    >
                      <label
                        class="o-checkbox d-flex align-items-center"
                        role="button"
                      >
                        <input
                          class="me-2 flex-shrink-0 border"
                          name="displayTotals"
                          type="checkbox"
                        />
                        
                      </label>
                    </div>
                  </div>
                  <div
                    class="row mb-2 align-items-center"
                  >
                    <div
                      class="col-6"
                    >
                      Show column titles:
                    </div>
                    <div
                      class="col-6 d-flex align-items-center"
                    >
                      <label
                        class="o-checkbox d-flex align-items-center"
                        role="button"
                      >
                        <input
                          class="me-2 flex-shrink-0 border"
                          name="displayColumnHeaders"
                          type="checkbox"
                        />
                        
                      </label>
                    </div>
                  </div>
                  <div
                    class="row mb-2 align-items-center"
                  >
                    <div
                      class="col-6"
                    >
                      Show measure titles:
                    </div>
                    <div
                      class="col-6 d-flex align-items-center"
                    >
                      <label
                        class="o-checkbox d-flex align-items-center"
                        role="button"
                      >
                        <input
                          class="me-2 flex-shrink-0 border"
                          name="displayMeasuresRow"
                          type="checkbox"
                        />
                        
                      </label>
                    </div>
                  </div>
                  <div
                    class="row mb-2 align-items-center"
                  >
                    <div
                      class="col-6"
                    >
                      Use tabular form:
                    </div>
                    <div
                      class="col-6 d-flex align-items-center"
                    >
                      <label
                        class="o-checkbox d-flex align-items-center"
                        role="button"
                      >
                        <input
                          class="me-2 flex-shrink-0 border"
                          name="tabularForm"
                          type="checkbox"
                        />
                        
                      </label>
                    </div>
                  </div>
                </div>
              </div>
              
            </div>
            <div
              class="o-section o-pivot-table-style"
            >
              <div
                class="o-section-title"
              >
                Pivot table style
                
                
              </div>
              
              <div
                class="row mb-2 align-items-center pt-2"
              >
                <div
                  class="col-6"
                >
                  Banded rows:
                </div>
                <div
                  class="col-6 d-flex align-items-center"
                >
                  <label
                    class="o-checkbox d-flex align-items-center"
                    role="button"
                  >
                    <input
                      class="me-2 flex-shrink-0 border"
                      name="bandedRows"
                      type="checkbox"
                    />
                    
                  </label>
                </div>
              </div>
              <div
                class="row mb-2 align-items-center"
              >
                <div
                  class="col-6"
                >
                  Banded columns
                </div>
                <div
                  class="col-6 d-flex align-items-center"
                >
                  <label
                    class="o-checkbox d-flex align-items-center"
                    role="button"
                  >
                    <input
                      class="me-2 flex-shrink-0 border"
                      name="bandedColumns"
                      type="checkbox"
                    />
                    
                  </label>
                </div>
              </div>
              <div
                class="row mb-2 align-items-center"
              >
                <div
                  class="col-6"
                >
                  Filter button
                </div>
                <div
                  class="col-6 d-flex align-items-center"
                >
                  <label
                    class="o-checkbox d-flex align-items-center"
                    role="button"
                  >
                    <input
                      class="me-2 flex-shrink-0 border"
                      name="hasFilters"
                      type="checkbox"
                    />
                    
                  </label>
                </div>
              </div>
              <div
                class="mt-4"
              >
                <div
                  class="o-table-style-picker d-flex flew-row justify-content-between ps-1 border rounded"
                >
                  <div
                    class="d-flex flex-row overflow-hidden o-pivot-previews"
                  >
                    <div
                      class="o-table-style-list-item position-relative selected"
                      data-id="None"
                      title="None"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight1"
                      title="Light Black 1"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight2"
                      title="Light Blue 2"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight3"
                      title="Light Red 3"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight4"
                      title="Light Green 4"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight5"
                      title="Light Purple 5"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight6"
                      title="Light Gray 6"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight7"
                      title="Light Orange 7"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight8"
                      title="Light Black 8"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight9"
                      title="Light Blue 9"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight10"
                      title="Light Red 10"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight11"
                      title="Light Green 11"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight12"
                      title="Light Purple 12"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight13"
                      title="Light Gray 13"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight14"
                      title="Light Orange 14"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight15"
                      title="Light Black 15"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight16"
                      title="Light Blue 16"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight17"
                      title="Light Red 17"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight18"
                      title="Light Green 18"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight19"
                      title="Light Purple 19"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight20"
                      title="Light Gray 20"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight21"
                      title="Light Orange 21"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight22"
                      title="Light Black 22"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight23"
                      title="Light Blue 23"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight24"
                      title="Light Red 24"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight25"
                      title="Light Green 25"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight26"
                      title="Light Purple 26"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight27"
                      title="Light Gray 27"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight28"
                      title="Light Orange 28"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    
                  </div>
                  <div
                    class="o-table-style-picker-arrow d-flex align-items-center px-1 border-start"
                  >
                    <div
                      class="o-icon fa-small"
                    >
                      <i
                        class="fa fa-caret-down"
                      />
                    </div>
                  </div>
                </div>
                
              </div>
              
            </div>
          </div>
        </div>
      </div>
    </div>
    
  </div>
</div>
`;
